--- a/index.html
+++ b/index.html
@@ -20,32 +20,38 @@
         </div>
       </header>
       <h1>WE ARE CREATIVES</h1>
-      <img src="images/icon-arrow-down.svg" alt="arrow-down">
+      <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow-down">
     </section>
     <section class="about">
       <div class="details">
         <h2>Transform your brand</h2>
         <p>We are a full-service creative agency specializing in helping brands grow fast.Engage your clients through compelling visuals that do most of the marketing for you.</p>
-        <button>Learn More</button>
+        <a href="#">Learn More</a>
       </div>
       <div class="image">
         <img src="images/desktop/image-transform.jpg" alt="Transform">
       </div>
-      <div class="details">
+      <div class="details reverse">
         <h2>Stand out to the right audience</h2>
         <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
-        <button>Learn More</button>
+        <a href="#">Learn More</a>
       </div>
-      <div class="image">
+      <div class="image reverse">
         <img src="images/desktop/image-stand-out.jpg" alt="Transform">
       </div>
       <div class="graphic">
-        <h2>Graphic design</h2>
-        <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
+        <img src="images/desktop/image-graphic-design.jpg" alt="Graphic">
+        <div class="info">
+          <h2>Graphic design</h2>
+          <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
+        </div>
       </div>
       <div class="photography">
-        <h2>Photography</h2>
-        <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+        <img src="images/desktop/image-photography.jpg" alt="photography">
+        <div class="info">
+          <h2>Photography</h2>
+          <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+        </div>
       </div>
     </section>
     <section class="reviews">
