--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <a href="#">Projects</a>
           <a class="active" href="#">Contact</a>
         </div>
+        <i class="fa-solid fa-bars"></i>
       </header>
       <h1>WE ARE CREATIVES</h1>
       <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow-down">
@@ -99,6 +100,12 @@
         </div>
       </div>
     </section>
+  </div>
+  <div class="mobile-menu">
+      <a href="#">About</a>
+      <a href="#">Services</a>
+      <a href="#">Projects</a>
+      <a class="active" href="#">Contact</a>
   </div>
   <script src="script.js"></script>
 </body>
